tests/ui/pattern/usefulness/slice-pattern-const.stderr
error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:9:9
   |
LL |         [84, 69, 83, 84] => (),
   |         ^^^^^^^^^^^^^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/slice-pattern-const.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:15:9
   |
LL |         [84, 69, 83, 84] => (),
   |         ^^^^^^^^^^^^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:21:9
   |
LL |         MAGIC_TEST => (),
   |         ^^^^^^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:28:9
   |
LL |         FOO => (),
   |         ^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:35:9
   |
LL |         BAR => (),
   |         ^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:43:9
   |
LL |         BOO => (),
   |         ^^^^^^^^^ this arm is never executed
...
LL |         b"" => (),
   |         --------- this arm is never executed
LL |
LL |         _ => (),
   |         ------- this arm is never executed

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:55:9
   |
LL |         [true] => {}
   |         ^^^^^^^^^^^^ this arm is never executed

error: aborting due to 7 previous errors

